# slicsim

./: .gitattributes  README.md  pyproject.toml  setup.py
demo/bayesn/: bayesn.ipynb  nn-datagen.ipynb  nre-diag.ipynb  nre.ipynb
demo/bayesn/config/: bayesn.yaml  diag.yaml  hpmvn.yaml  mvn.yaml  sep.yaml
demo/bayesn/data/: data-0.pt  data-100-cosmo-ir.pt  data-100-cosmo.pt  data-1000-cosmo-ir.pt  data-500-cosmo-ir.pt
demo/bayesn/lib/: bayesn.py  nn.py
demo/simplesn/: fig-areas.ipynb  fig-freqcal.ipynb  fig-latent.ipynb  fig-mcres.ipynb  fig-nre_mc.ipynb  fig-nreres.ipynb  fig-validation.ipynb  fig-zoom.ipynb  libplotting.py  libsimplesn.py  script.sh  simplesn-marginal.ipynb  simplesn-marginal.yaml  simplesn-nre.ipynb  simplesn-nre2.ipynb  simplesn-nre3-zoom.ipynb  simplesn-nre4-latent.ipynb  simplesn.yaml  surveysim.ipynb
demo/simplesn/scripts/: run_emcee.py  run_emcee_latent.py
demo/simplesn/surveys/: make.py
scripts/: extinction_f99.py  pysynphot_magsys.py  sncosmo_bandpasses.py
scripts/cspdr3/: cspdr3_bands.py
slicsim/: __init__.py  effects.py  model.py
slicsim/bandpasses/: __init__.py  __init__.pyi  bandpass.py  magsys.py
slicsim/data/magsys/: BD17.pt  alpha_lyr_004.pt  alpha_lyr_mod_001.pt  alpha_lyr_mod_003.pt  alpha_lyr_stis_004.pt  alpha_lyr_stis_005.pt  alpha_lyr_stis_006.pt  alpha_lyr_stis_007.pt  alpha_lyr_stis_008.pt  (+1 more)
slicsim/sources/: abc.py  bayesn.py  effects.py  salt.py  snemo.py  snemo.pyi
slicsim/spectral/: __init__.py
slicsim/survey/: __init__.py  instruments.py
slicsim/utils/: interpolated.py
snai/tossn/: model.py
(+202 files in other folders)
